--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -49,14 +49,14 @@ body {
 @media (min-width: 1200px) {
   .container-xl, .container-lg, .container-md, .container-sm, .container {
     max-width: 1140px;
-    width: 1140px;
+    width: 960px;
     height: 500px;
   }
 }
 @media (min-width: 1400px) {
   .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
     max-width: 1320px;
-    width: 1140px;
+    width: 960px;
     height: 500px;
   }
 }
@@ -88,7 +88,7 @@ body {
     margin-left: 1.5rem;
     margin-right: 1.5rem;
     padding: 0.5rem 1.5rem;
-    border-radius: 0.5rem;
+    border-radius: 1.5rem;
     border-color: transparent;
     background-color: rgba(226, 128, 233, 1);
     color: white;
@@ -122,19 +122,19 @@ body {
     margin-top: 50px;
 }
 
-.main-container ul {
+.main-container-nav {
     list-style-type: none;
     padding-inline-end: 40px;
 }
 
-.main-container li {
+.main-container-nav-item {
     margin-bottom: 1rem;
     cursor: pointer;
     display: flex;
     align-items: center;
 }
 
-.main-container li span {
+.main-container-nav-item span {
     margin-left: 0.5rem;
 }
 
@@ -161,6 +161,7 @@ body {
     border-radius: 3rem;
     height: 100%;
     width: 100%;
+    padding: 1rem;
 }
 
 .main-container-section-content {
@@ -175,7 +176,7 @@ body {
 .launch-dapp-button {
     margin-top: 1.5rem;
     padding: 0.5rem 1.5rem;
-    border-radius: 0.5rem;
+    border-radius: 1.5rem;
     border-color: transparent;
     background-color: rgba(226, 128, 233, 1);
     color: white;
@@ -188,7 +189,46 @@ body {
     background-color:  rgba(226, 128, 233, 0.3);
 }
 
-@media screen and (max-width: 760px) {
+/* dapp container style */
+.dapp-container-link {
+    text-decoration: unset;
+    color: unset;
+}
+
+/* usd style */
+.usd-section-content {
+    flex-direction: column !important;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+}
+
+.usd-menu {
+    display: flex;
+    justify-content: space-evenly;
+    overflow: scroll;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    list-style-type: none;
+}
+
+.usd-menu::-webkit-scrollbar {
+    display: none;
+}
+
+.usd-menu-item {
+    margin-right: 1rem;
+    cursor: pointer;
+    padding: 0 1rem;
+}
+
+.usd-menu-item-selected {
+    border-bottom: 8px teal solid;
+    font-weight: bold;
+}
+
+/* 768px media queries */
+@media screen and (max-width: 768px) {
 
     .main-container {
         margin-top: 0;
@@ -199,7 +239,7 @@ body {
         align-items: unset;
     }
 
-    .pre-main-container-section ul {
+    .main-container-nav {
         display: flex;
         overflow: scroll;
         height: 50px;
@@ -208,13 +248,17 @@ body {
         padding-inline-start: 0px;
     }
 
-    .pre-main-container-section ul::-webkit-scrollbar {
+    .main-container-nav::-webkit-scrollbar {
         display: none;
     }
 
-    .pre-main-container-section li {
+    .main-container-nav-item {
         margin-bottom: 0;
         margin-right: 1rem;
+    }
+
+    .main-container-section {
+        padding: 0;
     }
 
     .main-container-section-content {
@@ -225,10 +269,4 @@ body {
         margin-left: 0;
         margin-bottom: 1rem;
     }
-}
-
-/* dapp container style */
-.dapp-container-link {
-    text-decoration: unset;
-    color: unset;
 }
