--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -2,6 +2,10 @@ body {
     background-image: linear-gradient(rgba(226, 128, 233, 0.3), rgba(241, 212, 109, 0.3));
 }
 
+#root {
+  padding-bottom: 2rem;
+}
+
 /* bootstrap container */
 .container,
 .container-fluid,
@@ -15,50 +19,6 @@ body {
   padding-left: var(--bs-gutter-x, 0.75rem);
   margin-right: auto;
   margin-left: auto;
-}
-
-@media (min-width: 375px) {
-    .container-sm, .container {
-      max-width: 350px;
-      width: 350px;
-      height: 750px;
-    }
-  }
-
-@media (min-width: 576px) {
-  .container-sm, .container {
-    max-width: 540px;
-    width: 540px;
-    height: 500px;
-  }
-}
-@media (min-width: 768px) {
-  .container-md, .container-sm, .container {
-    max-width: 720px;
-    width: 720px;
-    height: 500px;
-  }
-}
-@media (min-width: 992px) {
-  .container-lg, .container-md, .container-sm, .container {
-    max-width: 960px;
-    width: 960px;
-    height: 500px;
-  }
-}
-@media (min-width: 1200px) {
-  .container-xl, .container-lg, .container-md, .container-sm, .container {
-    max-width: 1140px;
-    width: 960px;
-    height: 500px;
-  }
-}
-@media (min-width: 1400px) {
-  .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
-    max-width: 1320px;
-    width: 960px;
-    height: 500px;
-  }
 }
 
 /* main header style */
@@ -97,176 +57,156 @@ body {
     cursor: pointer;
 }
 
-@media screen and (max-width: 760px) {
-
+@media screen and (max-width: 768px) {
     .main-header {
         padding: 1rem;
     }
-
     .main-header-connect button {
         margin-left: 0.5rem;
         margin-right: 0.5rem;
     }
-
     .main-header-logo h2 {
         display: none;
     }
 }
 
-/* main container style */
-.main-container {
+/* app component */
+.app-container {
+    margin: 0 auto !important;
+    padding-top: 2rem;
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    align-self: center;
-    margin-top: 50px;
 }
 
-.main-container-nav {
-    list-style-type: none;
-    padding-inline-end: 40px;
+@media screen and (max-width: 768px) {
+  .app-container {
+    flex-direction: column;
+    padding-top: 0;
+  }
 }
 
-.main-container-nav-item {
-    margin-bottom: 1rem;
-    cursor: pointer;
+/* page container */
+.page-container-wrapper {
+  padding: 1rem;
+}
+
+.page-container {
+  padding: 1rem;
+  background-color: white;
+  border-radius: 1.5rem;
+  width: 600px;
+  height: 500px;
+  margin-left: 2rem;
+}
+
+@media (min-width: 375px) {
+  .page-container {
+    max-width: 310px;
+    width: 310px;
+    height: 500px;
+  }
+}
+  
+@media (min-width: 576px) {
+  .page-container {
+    max-width: 520px;
+    width: 520px;
+    height: 500px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .page-container {
+    margin-top: 1rem;
+  }
+}
+
+/* sidebar */
+.sidebar-menu {
+    list-style: none;
+}
+
+.sidebar-menu li {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     display: flex;
     align-items: center;
 }
 
-.main-container-nav-item span {
+.sidebar-menu a {
+    color: inherit;
+    text-decoration: none;
     margin-left: 0.5rem;
 }
 
-.main-container-top-row {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 2rem;
-}
-
-.pre-main-container-section {
-    display: flex;
-    align-items: center;
-}
-
-.main-container-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    margin: 0 auto;
-    border-radius: 3rem;
-    height: 100%;
-    width: 100%;
-    padding: 1rem;
-}
-
-.main-container-section-content {
-    padding: 1.5rem;
-    display: flex;
-}
-
-.main-container-section-content-image {
-    margin-left: 1rem;
-}
-
-.launch-dapp-button {
-    margin-top: 1.5rem;
-    padding: 0.5rem 1.5rem;
-    border-radius: 1.5rem;
-    border-color: transparent;
-    background-color: rgba(226, 128, 233, 1);
-    color: white;
-    font-weight: bold;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.launch-dapp-button:disabled {
-    background-color:  rgba(226, 128, 233, 0.3);
-}
-
-/* dapp container style */
-.dapp-container-link {
-    text-decoration: unset;
-    color: unset;
-}
-
-/* usd style */
-.usd-section-content {
-    flex-direction: column !important;
-    justify-content: space-between;
-    width: 100%;
-    height: 100%;
-}
-
-.usd-menu {
-    display: flex;
-    justify-content: space-evenly;
-    overflow: scroll;
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-    list-style-type: none;
-}
-
-.usd-menu::-webkit-scrollbar {
-    display: none;
-}
-
-.usd-menu-item {
-    margin-right: 1rem;
-    cursor: pointer;
-    padding: 0 1rem;
-}
-
-.usd-menu-item-selected {
-    border-bottom: 8px teal solid;
+.sidebar-menu-link-selected {
     font-weight: bold;
 }
 
-/* 768px media queries */
 @media screen and (max-width: 768px) {
+  .sidebar-menu {
+      display: flex;
+      overflow: scroll;
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+      padding-inline-start: 10px;
+  }
+  .sidebar-menu::-webkit-scrollbar {
+      display: none;
+  }
+  .sidebar-menu li {
+      padding-top: 0;
+      padding-bottom: 0;
+      padding-left: 1rem;
+      padding-right: 1rem;
+  }
+}
 
-    .main-container {
-        margin-top: 0;
-    }
+/* media queries */
 
-    .pre-main-container-section {
-        flex-direction: column;
-        align-items: unset;
-    }
 
-    .main-container-nav {
-        display: flex;
-        overflow: scroll;
-        height: 50px;
-        -ms-overflow-style: none;  /* IE and Edge */
-        scrollbar-width: none;  /* Firefox */
-        padding-inline-start: 0px;
-    }
 
-    .main-container-nav::-webkit-scrollbar {
-        display: none;
-    }
+@media (min-width: 375px) {
+  .container-sm, .container {
+    max-width: 350px;
+    width: 350px;
+    height: 750px;
+  }
+}
 
-    .main-container-nav-item {
-        margin-bottom: 0;
-        margin-right: 1rem;
-    }
-
-    .main-container-section {
-        padding: 0;
-    }
-
-    .main-container-section-content {
-        flex-direction: column-reverse;
-    }
-
-    .main-container-section-content-image {
-        margin-left: 0;
-        margin-bottom: 1rem;
-    }
+@media (min-width: 576px) {
+  .container-sm, .container {
+    max-width: 540px;
+    width: 540px;
+    height: 750px;
+  }
+}
+@media (min-width: 768px) {
+  .container-md, .container-sm, .container {
+    max-width: 720px;
+    width: 720px;
+    height: 600px;
+  }
+}
+@media (min-width: 992px) {
+  .container-lg, .container-md, .container-sm, .container {
+    max-width: 960px;
+    width: 960px;
+    height: 500px;
+  }
+}
+@media (min-width: 1200px) {
+  .container-xl, .container-lg, .container-md, .container-sm, .container {
+    max-width: 1140px;
+    width: 960px;
+    height: 500px;
+  }
+}
+@media (min-width: 1400px) {
+  .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
+    max-width: 1320px;
+    width: 960px;
+    height: 500px;
+  }
 }
