--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -98,6 +98,10 @@ body {
   width: 600px;
   height: 500px;
   margin-left: 2rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
 }
 
 @media (min-width: 375px) {
@@ -105,6 +109,10 @@ body {
     max-width: 310px;
     width: 310px;
     height: 500px;
+  }
+
+  .page-container-row {
+    flex-direction: column-reverse;
   }
 }
   
@@ -114,12 +122,63 @@ body {
     width: 520px;
     height: 500px;
   }
+
+  .page-container-row {
+    flex-direction: column-reverse;
+  }
+}
+
+@media (min-width: 768px) {
+  .page-container {
+    max-width: 650px;
+    width: 650px;
+    height: 500px;
+  }
+
+  .page-container-row {
+    flex-direction: row;
+  }
+}
+
+@media (min-width: 992px) {
+  .page-container {
+    max-width: 750px;
+    width: 750px;
+    height: 500px;
+  }
+
+  .page-container-row {
+    flex-direction: row;
+  }
 }
 
 @media screen and (max-width: 768px) {
   .page-container {
     margin-top: 1rem;
   }
+}
+
+.page-container-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.page-container-col {
+  margin-right: 1rem;
+}
+
+.launch-dapp-button {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  padding: 0.5rem 1.5rem;
+  border-radius: 1.5rem;
+  border-color: transparent;
+  background-color: rgba(226, 128, 233, 1);
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
 }
 
 /* sidebar */
@@ -163,9 +222,38 @@ body {
   }
 }
 
+/* index page */
+.index-image {
+  height: 250px;
+}
+
+.index-container-row {
+  flex-direction: column !important;
+}
+
+.index-container-col {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.index-title {
+  letter-spacing: 0.25rem;
+}
+
+.index-paragraph {
+  text-align: center;
+  padding: 0 5rem;
+}
+
+@media screen and(max-width: 767px) {
+  .index-paragraph {
+    padding: 0 !important;
+  }
+}
+
 /* media queries */
-
-
 
 @media (min-width: 375px) {
   .container-sm, .container {
