--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -132,6 +132,10 @@ code {
   font-size: 12px;
 }
 
+.text-underline {
+  text-decoration: underline;
+}
+
 .deploy-contract-editor {
   padding: 0.5rem;
   border: 1px $secondary solid;
