--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -124,6 +124,11 @@ code {
   text-align: left;
 }
 
+.fixed-inflation-paragraph {
+  font-size: 14px;
+  text-align: left;
+}
+
 .no-border {
   border: none;
 }
