--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -232,6 +232,9 @@ code {
     flex-wrap: nowrap;
     overflow: scroll;
   }
+  .inflation-name-input {
+    width: 100% !important;
+  }
 }
 
 /* page container */
