--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,3 @@
-.app.fantasy {background-color: black !important;}
-.app.magic {background-color: green !important;}
-.app.penguin {background-color: violet !important;}
+body.fantasy {background-color: black !important;}
+body.magic {background-color: green !important;}
+body.penguin {background-color: violet !important;}
