--- a/src/index.css
+++ b/src/index.css
@@ -14,21 +14,36 @@
 .Ditone {display: none; width: 30px; height: 30px;}
 .fantasyMenuLi:hover .Ditone {position: absolute; left: 10px; top: 10px; display: inline-block;}
 .mr-2, .mx-2 {margin-right: 1rem;}
-.magic {background: rgb(210,208,247);background: linear-gradient(135deg, rgba(210,208,247,1) 0%, rgba(253,247,245,1) 41%);}
-.magic .dapp-container {background-color: #ffffff !important;}
+.menuIconMap {vertical-align: middle; display: inline-block; width: 40px; height: 30px;}
+.menuIconEth {vertical-align: middle; display: inline-block; width: 30px; height: 30px;}
+.ChangeMod {display: inline-block; vertical-align: middle; font-size: 20px; cursor: pointer; text-decoration: none;}
+.ChangeMod:hover {text-decoration: none;}
+.BtnConnect, .BtnConnectAfter {font-size: 15px; padding: 4px 13px; display: inline-block; vertical-align: middle; margin: auto 5px auto 20px; background-color: transparent; border-radius: 8px; box-shadow: none; text-shadow: none; text-decoration: none; cursor: pointer;}
+.BtnConnect:hover, .BtnConnectAfter:hover {text-decoration: none;}
+.LogoM {background-image: url(./assets/images/covlogo.png); display: inline-block; height: 42px;width: 30px; vertical-align: middle; background-repeat: no-repeat;}
+
+
+.fantasy {background-color: black !important;}
+.fantasy .LogoM {background-position: 0 -50px;}
+
+
 .penguin {background: rgb(58,60,106);background: linear-gradient(135deg, rgba(58,60,106,1) 0%, rgba(0,0,0,1) 41%);}
 .penguin .dapp-container {background-color: #2d2e40 !important;}
 .penguin .sidebar-menu-link {color: #ffffff;}
 .penguin .nav-link {color: #ffffff;}
 .penguin .custom-control-label::before, .penguin .custom-file-label, .penguin .custom-select, .penguin .custom-select:focus {transition: none; background: url("./assets/images/arrowdown.png") right 0.75rem center/15px 10px no-repeat;border-color: #9e6915 !important; box-shadow: none;}
 .penguin .wusd-pair-select, .penguin .token-filter-input {background-color: #2d2e40 !important; color: #ffffff;}
+.penguin .LogoM {background-position: 0 0px;}
+.penguin .BtnConnect {border: 1px solid #7474f7; color: #7474f7;}
+.penguin .BtnConnectAfter {border: 1px solid #9e6915; color: #9e6915;}
+.penguin .TitleCov {color: #ffffff;}
+
+
+.magic {background: rgb(210,208,247);background: linear-gradient(135deg, rgba(210,208,247,1) 0%, rgba(253,247,245,1) 41%);}
+.magic .dapp-container {background-color: #ffffff !important;}
 .magic .custom-control-label::before, .magic .custom-file-label, .magic .custom-select, .magic .custom-select:focus {transition: none; background: url("./assets/images/arrowdownblack.png") right 0.75rem center/15px 10px no-repeat;}
 .magic .wusd-pair-select, .magic .token-filter-input {background-color: #ffffff !important; color: #000000;}
-.LogoM {background-image: url(./assets/images/covlogo.png); display: inline-block; height: 42px;width: 30px; vertical-align: middle; background-repeat: no-repeat;}
-.fantasy .LogoM {background-position: 0 -50px;}
 .magic .LogoM {background-position: 0 -50px;}
-.penguin .LogoM {background-position: 0 0px;}
-.menuIconMap {vertical-align: middle; display: inline-block; width: 40px; height: 30px;}
-.menuIconEth {vertical-align: middle; display: inline-block; width: 30px; height: 30px;}
-.ChangeMod {display: inline-block; vertical-align: middle; font-size: 20px; cursor: pointer; text-decoration: none;}
-.ChangeMod:hover {text-decoration: none;}
+.magic .BtnConnect {border: 1px solid #7474f7; color: #7474f7;}
+.magic .BtnConnectAfter {border: 1px solid #9e6915; color: #9e6915;}
+.magic .TitleCov {color: #000000;}
