--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,8 @@
 .Ditone {width: 20px; height: 20px; display: none; position: absolute; left: -10px;top: 18px; background-image: url(./assets/images/indicator.png); background-repeat: no-repeat;}
 .fantasyMenuLi:hover .Ditone {display: block !important; z-index: 10;left: -15px;}
 .sidebar-menu-link-selected .Ditone {display: block !important; z-index: 10;}
+.infoList {font-size: 13px; margin-bottom: 5px;margin-block-start: 0em;margin-block-end: 0em;}
+.infoList p {margin-bottom: 5px;margin-block-start: 0em;margin-block-end: 0em;}
 
 .fantasy {background-color: #4d4c4a !important;}
 .fantasy .LogoM {background-position: 0 -50px;}
@@ -43,6 +45,7 @@
 .penguin .BtnConnectAfter {border: 1px solid #9e6915; color: #9e6915;}
 .penguin .TitleCov {color: #ffffff;}
 .penguin .fantasyMenu:hover, .penguin .fantasyMenu {color: #ffffff;}
+.penguin .form-check-label {color: #ffffff;}
 
 
 .magic {background: rgb(210,208,247);background: linear-gradient(135deg, rgba(210,208,247,1) 0%, rgba(253,247,245,1) 41%);}
@@ -54,3 +57,4 @@
 .magic .BtnConnectAfter {border: 1px solid #9e6915; color: #9e6915;}
 .magic .TitleCov {color: #000000;}
 .magic .fantasyMenu:hover, .magic .fantasyMenu {color: #000000;}
+.magic .form-check-label {color: #000000;}
