--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@
 .sidebar-menu-link-selected .Ditone {display: block !important; z-index: 10;}
 .infoList {font-size: 13px; margin-bottom: 5px;margin-block-start: 0em;margin-block-end: 0em;}
 .infoList p {margin-bottom: 5px;margin-block-start: 0em;margin-block-end: 0em;}
+.row {margin-left: 0; margin-right: 0;}
 
 .fantasy {background-color: #4d4c4a !important;}
 .fantasy .LogoM {background-position: 0 -50px;}
@@ -45,7 +46,7 @@
 .penguin .BtnConnectAfter {border: 1px solid #9e6915; color: #9e6915;}
 .penguin .TitleCov {color: #ffffff;}
 .penguin .fantasyMenu:hover, .penguin .fantasyMenu {color: #ffffff;}
-.penguin .form-check-label {color: #ffffff;}
+.penguin .form-check-label, .penguin .infoList, .penguin .StatsBro {color: #ffffff;}
 
 
 .magic {background: rgb(210,208,247);background: linear-gradient(135deg, rgba(210,208,247,1) 0%, rgba(253,247,245,1) 41%);}
