--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,19 @@
 .infoList {font-size: 13px; margin-bottom: 5px;margin-block-start: 0em;margin-block-end: 0em;}
 .infoList p {margin-bottom: 5px;margin-block-start: 0em;margin-block-end: 0em;}
 .row {margin-left: 0; margin-right: 0;}
+.IndexRegular {display: inline-block; text-align: center;}
+.IndexRegular .IndexRegularContents {width: 95%; display: inline-block;}
+.IndexRegular .IndexRegularBTN {width: 95%; display: inline-block; margin-bottom: 30px;}
+.IndexRegular .IndexRegularText {width: 50%; display: inline-block; text-align: left;vertical-align: middle;}
+.IndexRegular .IndexRegularText p {width: 95%; font-size: 13px;}
+.IndexRegular .IndexRegularText h3 {width: 95%; font-size: 20px;}
+.IndexRegular .IndexRegularImg {width: 50%; display: inline-block; text-align: center;vertical-align: middle;}
+.IndexRegular .IndexRegularImg img {width: 90%; height: auto; display: inline-block;}
+.btn-Fantasy {border: 2px solid #4d4c4a; color: #ffffff;background-color: #4d4c4a;}
+.btn-Fantasy:hover {color: #ffffff; border-color: #4d4c4a;}
+.Footer {width: 100%; min-width: 100%; display: inline-block; text-align: center; position: absolute; bottom: 0; left: 0;}
+.Footer p {padding: 30px; display: inline-block;}
+.Footer img {display: none;}
 
 .fantasy {background-color: #4d4c4a !important;}
 .fantasy .LogoM {background-position: 0 -50px;}
@@ -33,7 +46,9 @@
 
 .fantasy .TitleCov {color: #ffffff;}
 .fantasy .fantasyMenu:hover, .fantasy .fantasyMenu {color: #ffffff;}
-.fantasy .BtnConnectAfter, .fantasy .BtnConnect,.fantasy .menuIconEth {display: none !important;}
+.fantasy .BtnConnectAfter, .fantasy .BtnConnect,.fantasy .menuIconEth, .fantasy .ChangeMod {display: none !important;}
+.fantasy .IndexRegular {color: #000000;}
+.fantasy .Footer img {display: block; position: absolute; bottom: 0; left: 0; min-width: 100%; width: 100%; height: auto; z-index: 1;}
 
 
 .penguin {background: rgb(58,60,106);background: linear-gradient(135deg, rgba(58,60,106,1) 0%, rgba(0,0,0,1) 41%);}
@@ -49,6 +64,7 @@
 .penguin .TitleCov {color: #ffffff;}
 .penguin .fantasyMenu:hover, .penguin .fantasyMenu {color: #ffffff;}
 .penguin .form-check-label, .penguin .infoList, .penguin .StatsBro, .penguin .StatsBroO {color: #ffffff;}
+.penguin .IndexRegular {color: #ffffff;}
 
 
 .magic {background: rgb(210,208,247);background: linear-gradient(135deg, rgba(210,208,247,1) 0%, rgba(253,247,245,1) 41%);}
@@ -61,3 +77,4 @@
 .magic .TitleCov {color: #000000;}
 .magic .fantasyMenu:hover, .magic .fantasyMenu {color: #000000;}
 .magic .form-check-label {color: #000000;}
+.magic .IndexRegular {color: #000000;}
