--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@
     font-weight: bold;
  }
 
-.fantasy {background-color: black !important;}
 .fantasyMenu {font-size: 13px;}
 .fantasyMenuLi {position: relative; cursor: pointer;}
 .mr-2, .mx-2 {margin-right: 1rem;}
@@ -38,6 +37,7 @@
 .Footer {width: 100%; min-width: 100%; display: inline-block; text-align: center; position: absolute; bottom: 0; left: 0;}
 .Footer p {padding: 30px; display: inline-block;}
 .Footer img {display: none;}
+.page-container, .dapp-container {z-index: 5; position: relative;}
 
 .fantasy {background-color: #4d4c4a !important;}
 .fantasy .LogoM {background-position: 0 -50px;}
