--- a/src/index.css
+++ b/src/index.css
@@ -35,9 +35,11 @@
 .btn-Fantasy {border: 2px solid #4d4c4a; color: #ffffff;background-color: #4d4c4a;}
 .btn-Fantasy:hover {color: #ffffff; border-color: #4d4c4a;}
 .Footer {width: 100%; min-width: 100%; display: inline-block; text-align: center; position: absolute; bottom: 0; left: 0;}
-.Footer p {padding: 30px; display: inline-block;}
+.Footer p {padding: 30px; display: inline-block; width: 50%; font-size: 13px;}
+.Footer p a {text-decoration: underline;}
 .Footer img {display: none;}
 .page-container, .dapp-container {z-index: 5; position: relative;}
+.card {background-color: transparent;}
 
 .fantasy {background-color: #4d4c4a !important;}
 .fantasy .LogoM {background-position: 0 -50px;}
@@ -49,7 +51,8 @@
 .fantasy .BtnConnectAfter, .fantasy .BtnConnect,.fantasy .menuIconEth, .fantasy .ChangeMod {display: none !important;}
 .fantasy .IndexRegular {color: #000000;}
 .fantasy .Footer img {display: block; position: absolute; bottom: 0; left: 0; min-width: 100%; width: 100%; height: auto; z-index: 1;}
-
+.fantasy .Footer p {color: #252525;}
+.fantasy .Footer p a {font-weight: bold; color: #000000 !important;}
 
 .penguin {background: rgb(58,60,106);background: linear-gradient(135deg, rgba(58,60,106,1) 0%, rgba(0,0,0,1) 41%);}
 .penguin .dapp-container {background-color: #2d2e40 !important;}
@@ -65,6 +68,9 @@
 .penguin .fantasyMenu:hover, .penguin .fantasyMenu {color: #ffffff;}
 .penguin .form-check-label, .penguin .infoList, .penguin .StatsBro, .penguin .StatsBroO {color: #ffffff;}
 .penguin .IndexRegular {color: #ffffff;}
+.penguin .Footer p {color: #adadad;}
+.penguin .Footer p a {font-weight: bold; color: #ffffff !important;}
+.penguin .card {border: 1px solid #000000; color: #ffffff;}
 
 
 .magic {background: rgb(210,208,247);background: linear-gradient(135deg, rgba(210,208,247,1) 0%, rgba(253,247,245,1) 41%);}
@@ -78,3 +84,6 @@
 .magic .fantasyMenu:hover, .magic .fantasyMenu {color: #000000;}
 .magic .form-check-label {color: #000000;}
 .magic .IndexRegular {color: #000000;}
+.magic .Footer p {color: #636363;}
+.magic .Footer p a {font-weight: bold; color: #000000 !important;}
+.magic .card {border: 1px solid #aaaaaa; color: #000000;}
