--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@
     font-weight: bold;
  }
 
-.fantasyMenu {font-size: 13px;}
+.body {position: relative;}
+.fantasyMenu {font-size: 13px;z-index: 5; position: relative;}
 .fantasyMenuLi {position: relative; cursor: pointer;}
 .mr-2, .mx-2 {margin-right: 1rem;}
 .menuIconMap {vertical-align: middle; display: inline-block; width: 40px; height: 30px;}
@@ -34,12 +35,13 @@
 .IndexRegular .IndexRegularImg img {width: 90%; height: auto; display: inline-block;}
 .btn-Fantasy {border: 2px solid #4d4c4a; color: #ffffff;background-color: #4d4c4a;}
 .btn-Fantasy:hover {color: #ffffff; border-color: #4d4c4a;}
-.Footer {width: 100%; min-width: 100%; display: inline-block; text-align: center; position: absolute; bottom: 0; left: 0;}
+.Footer {width: 100%; min-width: 100%; display: inline-block; text-align: center; position: fixed; bottom: 0; left: 0;}
 .Footer p {padding: 30px; display: inline-block; width: 50%; font-size: 13px;}
 .Footer p a {text-decoration: underline;}
 .Footer img {display: none;}
-.page-container, .dapp-container {z-index: 5; position: relative;}
+.page-container, .dapp-container {z-index: 5; position: relative;margin-bottom: 100px;}
 .card {background-color: transparent;}
+.navbar {z-index: 5;}
 
 .fantasy {background-color: #4d4c4a !important;}
 .fantasy .LogoM {background-position: 0 -50px;}
