--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,13 @@
      background-position:20vw;
    }
  }
-
+.DescCov {text-align: center; width: 80%; display: inline-block; margin: 30px auto;}
+.DescCov p {font-size: 14px;}
+.DescCov h2 {text-align: center; font-size: 30px; font-weight: bold !important;}
+.DescCov h5 {text-align: center; font-size: 20px;font-weight: bold !important; margin: 10px auto;}
+.CovTITLE {margin: 20px auto; display: inline-block; width: 90%; text-align: center;}
+.CovTITLE figure {width: 40%; display: inline-block; height: auto;}
+.CovTITLE figure img {width: 100%; display: inline-block; height: auto;}
 
 .fantasy {background-color: #4d4c4a !important;}
 .fantasy .LogoM {background-position: 0 -50px;}
