--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -199,8 +199,8 @@ code {
 }
 
 .health-bar {
-  border-radius: 1.5rem;
-  padding: 0.5rem 1.5rem;
+  border-radius: 8px;
+  padding: 3px 5px;
   text-align: right;
 }
 
