--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
 .fantasyMenuLi:hover .Ditone {display: block !important; z-index: 10;left: -15px;}
 .sidebar-menu-link-selected .Ditone {display: block !important; z-index: 10;}
 .infoList {font-size: 13px; margin-bottom: 5px;margin-block-start: 0em;margin-block-end: 0em;}
-.infoList p {margin-bottom: 5px;margin-block-start: 0em;margin-block-end: 0em;}
+.infoList p {margin: 0px;margin-block-start: 0em;margin-block-end: 0em; display: inline-block; width: 100%;padding: 4px 0;}
 .row {margin-left: 0; margin-right: 0;}
 .IndexRegular {display: inline-block; text-align: center;}
 .IndexRegular .IndexRegularContents {width: 95%; display: inline-block;}
@@ -70,6 +70,22 @@
 .CovTITLE {margin: 20px auto; display: inline-block; width: 90%; text-align: center;}
 .CovTITLE figure {width: 40%; display: inline-block; height: auto;}
 .CovTITLE figure img {width: 100%; display: inline-block; height: auto;}
+.LogoWUSD {width: 80%; margin: 10px auto;display: inline-block;}
+.LogoWUSD img {width: 100%; display: inline-block; height: auto;}
+.xTitle {width: 100%; display: inline-block; text-align: left; font-weight: bold; margin: 0px auto 10px auto; font-size: 17px;}
+.xTitle img {margin-right: 10px; width: 35px; height: 35px;}
+.HealthContainer {width:80%; display: inline-block; margin: 10px auto 40px auto;}
+.StatsIndicator {width: 45%; padding: 4px 0% 4px 5%; height: auto; display: inline-block;}
+.StatsBro {display: inline-block; text-align: left; width: 22%; padding-left: 3%; margin-right: 10% !important;vertical-align: middle !important;}
+.StatsBroO {margin-bottom: 20px;}
+.StatsSis {width: 65%;text-align: left; display: inline-block; vertical-align: middle !important;}
+.StatsIndicator p, .StatsIndicator a {font-size: 13px;}
+.StatsIndicator h6 {font-size: 14px;}
+.StatsLink {display: inline-block; width: 90%; margin: 5px auto; text-align: center;}
+.StatsLink a {font-size: 11px; margin: 5px 5px; display: inline-block; padding: 2px 5px; border-radius: 5px; cursor: pointer;}
+.health-bar {border-radius: 8px; width: 100%;text-align: left;font-weight: bold;padding: 4px 0;font-size: 14px;}
+.health-bar aside {border-radius: 8px; text-align: center; padding: 5px 0;}
+.health-bar aside span {background-color: transparent; color: #ffffff;}
 
 .fantasy {background-color: #4d4c4a !important;}
 .fantasy .LogoM {background-position: 0 -50px;}
@@ -93,13 +109,17 @@
 .penguin .LogoM {background-position: 0 0px;}
 .penguin .BtnConnect {border: 1px solid #7474f7; color: #7474f7;}
 .penguin .BtnConnectAfter {border: 1px solid #9e6915; color: #9e6915;}
-.penguin .TitleCov {color: #ffffff;}
+.penguin .TitleCov, .penguin .xTitle, .penguin .StatsIndicator a {color: #ffffff;}
 .penguin .fantasyMenu:hover, .penguin .fantasyMenu {color: #ffffff;}
 .penguin .form-check-label, .penguin .infoList, .penguin .StatsBro, .penguin .StatsBroO {color: #ffffff;}
 .penguin .IndexRegular, .penguin .Web3, .penguin .disclamer {color: #ffffff;}
 .penguin .Footer p {color: #adadad;}
 .penguin .Footer p a, .penguin .disclamer a {font-weight: bold; color: #ffffff !important;}
 .penguin .card {border: 1px solid #000000; color: #ffffff;}
+.penguin .StatsLink a {border: 1px solid #9e6915; color: #9e6915;}
+.penguin .StatsLink a:hover {color: #9e6915;}
+.penguin .nav-item-selected {border-bottom: 8px solid #7474f7;}
+.penguin .health-bar {background-color: #1c1c27;}
 
 
 .magic {background: rgb(210,208,247);background: linear-gradient(135deg, rgba(210,208,247,1) 0%, rgba(253,247,245,1) 41%);}
@@ -109,13 +129,18 @@
 .magic .LogoM {background-position: 0 -50px;}
 .magic .BtnConnect {border: 1px solid #7474f7; color: #7474f7;}
 .magic .BtnConnectAfter {border: 1px solid #9e6915; color: #9e6915;}
-.magic .TitleCov {color: #000000;}
+.magic .TitleCov, .magic .StatsIndicator a {color: #000000;}
 .magic .fantasyMenu:hover, .magic .fantasyMenu {color: #000000;}
 .magic .form-check-label {color: #000000;}
 .magic .IndexRegular {color: #000000;}
 .magic .Footer p {color: #636363;}
 .magic .Footer p a, .magic .disclamer a {font-weight: bold; color: #000000 !important;}
 .magic .card {border: 1px solid #aaaaaa; color: #000000;}
+.magic .StatsLink a {border: 1px solid #9e6915; color: #9e6915;}
+.magic .StatsLink a:hover {color: #9e6915;}
+.magic .nav-item-selected {border-bottom: 8px solid #7474f7;}
+.magic .health-bar {background-color: #ebebeb;}
+
 
 
 @media only screen and (max-device-width: 750px) {
