--- a/src/index.css
+++ b/src/index.css
@@ -145,7 +145,7 @@
 .penguin .FooterP p a, .penguin .disclamer a {font-weight: bold; color: #adadad !important;}
 .penguin .card {border: 1px solid #000000; color: #ffffff;}
 .penguin .StatsLink a {border: 1px solid #9e6915; color: #9e6915;text-decoration: none;}
-.penguin .StatsLink a:hover {color: #9e6915; text-decoration: none;}
+.penguin .StatsLink a:hover {color: #9e6915; text-decoration: none !important;}
 .penguin .nav-item-selected {border-bottom: 8px solid #7474f7;}
 .penguin .health-bar {background-color: #1c1c27;}
 .penguin .SelectRegular {border-color: #9e6915; color: #9e6915;}
@@ -169,7 +169,7 @@
 .magic .FooterP p a, .magic .disclamer a {font-weight: bold; color: #636363 !important;}
 .magic .card {border: 1px solid #aaaaaa; color: #000000;}
 .magic .StatsLink a {border: 1px solid #9e6915; color: #9e6915;}
-.magic .StatsLink a:hover {color: #9e6915;}
+.magic .StatsLink a:hover {color: #9e6915;text-decoration: none !important;}
 .magic .nav-item-selected {border-bottom: 8px solid #7474f7;}
 .magic .health-bar {background-color: #ebebeb;}
 .magic .SelectRegular {border-color: #9e6915; color: #9e6915;}
