--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@
 .CovDesc p {font-size: 13px; margin-bottom: 10px; display: inline-block;}
 .CovLinks {margin-top: 10px; display: inline-block;}
 .CovLinks h5 {font-size: 15px; display: inline-block; font-weight: bold; width: 100%; margin-top: 20px;}
-.CovLinks a {font-size: 13px; display: inline-block; margin: 5px 5px; text-decoration: underline !important; cursor: pointer;}
+.CovLinks a {font-size: 13px; display: inline-block; margin: 5px 5px; text-decoration: underline !important; cursor: pointer; color: #000000;}
 .ConnectBTN {display: inline-block;margin: 30px auto;text-align: center;cursor: pointer; background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 49%, #FC4F4F 80%, #00C0FF 100%);color: #ffffff !important;text-shadow: #c0c0c0 1px 1px;text-decoration: none;cursor: auto;box-shadow: none;border: 1px solid transparent;outline: none;opacity: 1;padding: 10px 30px;border-radius: 12px;font-weight: 500;text-decoration: none;display: inline-block;animation: slidebg 10s linear infinite;}
 .Web3 {width: 80%; font-size: 15px; text-align: center;}
 .Web3 a {text-decoration: underline !important; color: #7474f7; font-weight: bold;}
